syntax = "proto3";

package book_service;

option java_multiple_files = true;
option java_package = "com.example.book_service";

service BookService {
  rpc createBook(CreateBookRequest) returns (CreateBookResponse) {}
  rpc updateBook(UpdateBookRequest) returns (CreateBookResponse) {}
  rpc openBook(OpenBookRequest) returns (Book) {}
  rpc deleteBook(OpenBookRequest) returns (DeleteBookResponse) {}
  rpc listBooks(ListBookRequest) returns (ListBookResponse) {}

  rpc deleteCart(DeleteCartRequest) returns (DeleteCartResponse) {}
  rpc addCart(AddCartRequest) returns (Cart) {}
  rpc listCarts(ListCartRequest) returns (ListCartResponse) {}
  rpc updateCart(UpdateCartRequest) returns (Cart) {}
}

message BookImage {
  string format = 1;
  string resourceType = 2;
  string secureUrl = 3;
  string createdAt = 4;
  string url = 5;
  int64 width = 6;
  int64 bytes = 7;
  int64 height = 8;
}

message Cart {
  string id = 1;
  Book book = 2;
  string createdAt = 3;
  string createdBy = 4;
  int64 quantity = 5;
}

message UpdateCartRequest {
  string cartId = 1;
  string userName = 2;
  int64 quantity = 3;
}

message AddCartRequest {
  string bookId = 1;
  string userName = 2;
  int64 quantity = 3;
}

message DeleteCartRequest {
  string cartId = 1;
  string userName = 2;
}
message DeleteCartResponse{
  string id = 1;
  string statusMessage = 2;
}
message ListCartResponse{
    repeated Cart carts = 1;
    Pagination pagination = 2;
}
message ListCartRequest{
    string userName = 1;
    int32 page = 2;
    int32 perPage = 3;
}
message Book {
  string id = 1;
  string title = 2;
  string description = 3;
  repeated string authors = 4;
  int64 quantity = 5;
  bool inStock = 6;
  string createdAt = 7;
  string createdBy = 8;
  string bookSlug = 9;
  string isbn = 10;
  repeated BookImage bookImage = 11;
  bool isDeleted = 12;
  double discount = 13;
  double price = 14;
}

message UpdateBookRequest {
  string Id = 1;
  string title = 2;
  string description = 3;
  repeated string authors = 4;
  int64 quantity = 5;
  bool inStock = 6;
  string bookSlug = 7;
  string isbn = 8;
  repeated BookImage bookImage = 9;
  string userName = 10;
  double discount = 11;
  double price = 12;
}

message CreateBookRequest {
  Book book = 1;
}

message CreateBookResponse{
  Book book = 1;
}

message OpenBookRequest{
    string searchCriteria = 1;
}

message Pagination{
    bool hasPrevious = 1;
    bool hasNext = 2;
    int64 totalPage = 3;
    int64 currentPage = 4;
    int64 totalItem = 5;
    int64 perPage = 6;
}
message ListBookResponse{
    repeated Book book = 1;
    Pagination pagination = 2;
}

message DeleteBookResponse{
  string id = 1;
  string statusMessage = 2;
}

message ListBookRequest{
    int32 page = 1;
    int32 perPage = 2;
}


/*For strings, the default value is the empty string.
For bytes, the default value is empty bytes.
For bools, the default value is false.
For numeric types, the default value is zero.
For enums, the default value is the first defined enum value, which must be 0.
For message fields, the default value is null.*/